<resources>
    <string name="app_name">Group5Project3175-003</string>
    <string name="txtTitleBigExpense">BIG EXPENSE PLAN</string>
    <string name="txtInputBigExpense">Input your estimated cost</string>
    <string name="btnBigExpenseSubmit">SUBMIT</string>
    <string name="homepage">homepage</string>
    <string name="report">report</string>
    <string name="account">account</string>
    <string name="settings">settings</string>
    <string name="imgBigExpense">imgBigExpense</string>
    <string name="btnBigExpense">Big expense</string>
    <string name="txtTitleSettings">SETTINGS</string>
    <string name="txtChangeSetting">CHANGE PROFILES</string>
    <string name="txtSettingChangeFirstName">Input your First name</string>
    <string name="txtSettingChangeEmail">Input your email address</string>
    <string name="txtSettingChangePhone">Input your phone number</string>
    <string name="txtSettingChangePassword">Input your password</string>
    <string name="btnSettingChange">SAVE</string>
    <string name="btnSettings">Settings</string>
    <string name="imgbtnhome">home</string>
    <string name="imgbtnaccount">account</string>
    <string name="imgbtnsettings">settings</string>
    <string name="imgbtnreport">report</string>
    <string name="NewUser1Text1">STEP 1/3</string>
    <string name="NewUser1Title">Create your account</string>
    <string name="NewUser1Text2">Your name and password will be used for login</string>
    <string name="NewUser1Text3" translatable="false">FIRST NAME</string>
    <string name="NewUser1Text4">LAST NAME</string>
    <string name="NewUser1Text5">EMAIL ADDRESS</string>
    <string name="NewUser1Text6">PASSWORD</string>
    <string name="NewUser1Text7">PASSWORD</string>
    <string name="NewUser1Hint1">8character is maximum</string>
    <string name="NewUser1Hint2">Re-enter your password</string>
    <string name="NewUser2Text1">STEP 2/3</string>
    <string name="NewUser2Title1">Make the basic settings</string>
    <string name="NewUser2Text2">CURRENCY</string>
    <string name="NewUser2Text3">LANGUAGE</string>
    <string name="NewUser2Text4">ALARM</string>
    <string name="NewUser2Text5">THEME</string>
    <string name="NewUser2R1">Pop up alarm</string>
    <string name="NewUser2R2">Dark mode</string>
    <string name="NewUserBtn1">CONTINUE</string>
    <string name="NewUser3Text1">STEP 3/3</string>
    <string name="NewUser3Title">Set your account</string>
    <string name="NewUser3Text2">You can continue customizing it later</string>
    <string name="NewUser3Text3">ACCOUNT NAME</string>
    <string name="NewUser3Text4">SALARY</string>
    <string name="NewUser3Hint1">My saving account</string>
    <string name="NewUserBtn2">WELCOME</string>
    <string name="CustomerReportTitle">Customize Report</string>
    <string name="CustomerSDate">Enter Start Date</string>
    <string name="CustomerEDate">Enter Ending Date</string>
    <string name="CustomerBtnSubmit">Submit</string>
    <string name="imglistviewlayout">an image</string>
    <string name="btnNewUser">New User</string>
    <string name="txtSettingAccountTitle">Account Information</string>
    <string-array name="Currency">
        <item>Canadian dollar(CAD)</item>
        <item>U.S. dollar(USD)</item>
        <item>Chinese yuan(RMB)</item>
        <item>Korean Won(KRW)</item>
    </string-array>
    <string-array name="Language">
        <item>English</item>
        <item>French</item>
        <item>Chinese</item>
        <item>Korean</item>
    </string-array>
    <string-array name="BudgetType">
        <item>Monthly Budget</item>
        <item>Daily Budget</item>
        <item>Weekly Budget</item>
        <item>Yearly Budget</item>
    </string-array>
    <string name="imgFirstPage">img test</string>
    <string name="covertitle">covertitle</string>
    <string name="coversubtitle">coversubtitle</string>
    <string name="guestregibar1">guestregibar1</string>
    <string name="guestregibar2">guestregibar2</string>
    <string name="guestregititle1">guestregititle1</string>
    <string name="guestregititle2">guestregititle2</string>
    <string name="btnwelcome">btnwelcome</string>
    <string name="btncontinue">btncontinue</string>
    <string name="regibar1">regibar1</string>
    <string name="regibar2">regibar2</string>
    <string name="regibar3">regibar3</string>
    <string name="regititle1">regititle1</string>
    <string name="regititle2">regititle2</string>
    <string name="regititle3">regititle3</string>
    <string name="btnTracker">btnTracker</string>
    <string name="btnBig">btnBig</string>
    <string name="btnReport">btnReport</string>
    <string name="btnSetting">btnSetting</string>
    <string name="btnAdd">btnAdd</string>
    <string name="signuptitleimg">signuptitleimg</string>
    <string name="btnsignup1">btnsignup1</string>
    <string name="btnsignup2">btnsignup2</string>
    <string name="bigexpensetitle1">bigexpensetitle1</string>
    <string name="bigexpensetitle2">bigexpensetitle2</string>
    <string name="btnSubmit">btnSubmit</string>
    <string name="comment_big">Input your estimated cost</string>
    <string name="settingTitle">settingTitle</string>
    <string name="reportTitle">reportTitle</string>
    <string name="btnEdit">btnEdit</string>
    <string name="addnewtitle">addnewtitle</string>
    <string name="btnsave">btnsave</string>
    <string name="txtAddNew">txtAddNew</string>
    <string name="addnewhint">$</string>
    <string name="txtcategory">Category</string>
    <string name="txtDate">Date</string>
    <string name="txtrecurring">Make recurring</string>
    <string name="NewUser3Text5">ADDITIONAL INCOME</string>
    <string name="NewUser3Text6">SAVING</string>
    <string name="CheckAccountHint1">Enter your Email address</string>
    <string name="CheckAccountHint2">Password</string>
    <string name="txtSettingChangeLastName">Input your LastName</string>
    <string name="txtSettingChangeAcName">Input your Account Name</string>
    <string name="btnTestCheck">Check</string>
    <string name="btnTestAdd">Back to register</string>
    <string name="txtbigdate">Double Click to choose the due date</string>
    <string-array name="bigCategory">
        <item>Gift</item>
        <item>Travel</item>
        <item>Education</item>
        <item>Health</item>
        <item>Investment</item>
        <item>Others</item>
    </string-array>
    <string name="txtBigDes">Write some notes</string>
    <string name="radReport1">Report Overview</string>
    <string name="radReport2">Report of Fixed Spending</string>
    <string name="radReport3">Money Breakdown for Events</string>
    <string name="radReport4">History Report Search</string>
    <string name="txtReportCustomize">Choose the date:</string>
    <string name="txtReportStartDate">Double Click to choose start date</string>
    <string name="txtReportEndDate">Double Click to choose end date</string>
    <string name="btnReportCustomize">Submit</string>
    <string name="txtMonthExpense">Your Expense:</string>
    <string name="txtMonthSaving">Your Saving:</string>
    <string name="txtmoneybreakTitle">Money breakdown for events</string>
    <string name="btnViewbig">View bigExpense</string>
    <string name="btnTrace1">Monthly bills</string>
    <string name="btnTrace2">Daily expenses</string>
    <string name="titleTrace">Expense Tracker</string>

    <string name="titleDailyExpense">Enter your daily expense below:</string>
    <string name="titleDailyExpense2">Please enter once perday</string>
    <string name="txtexpensename">Enter name</string>
    <string name="txtexpensedate">Double Click to choose date of expense</string>
    <string name="txtexpenseam">Enter amount</string>
    <string-array name="degroup">
        <item>Grocery</item>
        <item>Transportation</item>
        <item>Health</item>
        <item>Education</item>
        <item>Beauty</item>
        <item>Utility</item>
        <item>Events</item>
    </string-array>
    <string name="btnexpenseadd">Add expense</string>
    <string name="btnexpenseview">View expense</string>


    <string name="titleBills">Enter your monthly bills below:</string>
    <string name="txtbillname">Enter name</string>
    <string name="txtbilldate">Double Click to choose due date</string>
    <string name="txtbillam">Enter amount</string>
    <string name="btnbilladd">Add Bill</string>
    <string name="btnbillview">View Bill</string>

    <string name="mainIncome">Balance:</string>
    <string name="mainSaving">Saving:</string>
    <string name="mainDailyExAllowed">Daily Expense Allowed:</string>
    <string name="settleEX">SETTLE</string>
    <string name="btnlogin">login</string>

</resources>